# radium

./: Cargo.toml  Makefile  README.md  build.rs  env.sh
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
completions/: completions.bash  completions.conf
src/: args.rs  consts.rs  main.rs  mirror.rs  read_line.c  shell.rs  types.rs  util.rs
test/: meta.json  up.sh
tools/: env.sh  install.sh
