[package]
name = "radium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.73"

[dependencies]
anyhow = "1.0.58"
atty = "0.2.14"
clap = { version = "3.1.6", features = ["derive"] }
dirs = "4.0.0"
json = "0.12.4"
libc = "0.2.126"
nix = "0.24.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
termcolor = "1.1.3"
tokio = { version = "1", features = ["full"] }
